--- a/DiamondShopSystem/customer-client/src/style/Diamond.css
+++ b/DiamondShopSystem/customer-client/src/style/Diamond.css
@@ -40,3 +40,15 @@ input[type=number] {
     border-color: #D3D3D3;
     padding-right: 5px;
   }
+
+  .number-input::placeholder {
+    margin-left: 10px;
+  }
+
+  .number-input::placeholder {
+    padding-left: 10px;
+  }
+
+  .number-input {
+    padding-left: 10px;
+  }
