--- a/DiamondShopSystem/customer-client/src/style/DiamondList.css
+++ b/DiamondShopSystem/customer-client/src/style/DiamondList.css
@@ -8,7 +8,8 @@
     border-collapse: collapse;
 }
 
-.diamond-table th, .diamond-table td {
+.diamond-table th,
+.diamond-table td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
@@ -19,13 +20,6 @@
     color: #333;
 }
 
-.diamond-table img {
-    width: 50px;
-    height: auto;
-    margin-right: 10px;
-    vertical-align: middle;
-}
-
 .pagination {
     display: flex;
     justify-content: center;
@@ -33,14 +27,27 @@
 }
 
 .page-button {
-    padding: 10px;
     margin: 0 5px;
-    cursor: pointer;
+    padding: 10px 15px;
+    border: none;
     background-color: #f4f4f4;
-    border: 1px solid #ddd;
-    transition: background-color 0.3s;
+    cursor: pointer;
 }
 
-.page-button:hover, .page-button.active {
-    background-color: #ddd;
+.page-button.active {
+    background-color: #333;
+    color: #fff;
+}
+
+.add-to-cart-button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.add-to-cart-button:hover {
+    background-color: #0056b3;
 }
