--- a/DiamondShopSystem/customer-client/src/index.css
+++ b/DiamondShopSystem/customer-client/src/index.css
@@ -18,3 +18,13 @@ code {
     monospace;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
